--- a/რაინჰარდ_ჰაიდრიხი.mw
+++ b/რაინჰარდ_ჰაიდრიხი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Heydrich4.jpg|thumb|200px|კადეტი ჰაიდრიხი 1924 წელს]]
-'''ჰაიდრიხი, რაინჰარდ ტრისტან ოიგენ'''  (''გერმ.'' ''Reinhard Tristan Eugen Heydrich'') (* [[7 მარტი]], [[1904]],  [[ჰალე (ზაალე)]], [[გერმანია]];  † [[4 ივნისი]], [[1942]], [[პრაღა]], [[ჩეხეთი]]) - [[მესამე რაიხი|მესამე რაიხის]] ხანის [[გერმანია|გერმანიის]] სახელმწიფო და სამხედრო მოღვაწე, [[SS]]-ის [[ობერგრუპენფიურერი]] და პოლიციის [[გენერალი]], [[რაიხის უშიშროების მთავარი სამმართველო|რაიხის უშიშროების მთავარი სამმართველოს]] ([[RSHA]]) ხელმძღვანელი, [[ბოჰემია|ბოჰემიის]] და [[მორავია|მორავიის]] [[რაიხსპროტექტორი|რაიხსპროტექტორის]] მოადგილე.
+'''ჰაიდრიხი, რაინჰარდ ტრისტან ოიგენ'''  (''გერმ.'' ''Reinhard Tristan Eugen Heydrich'') (* [[7 მარტი]], [[1904]],  [[ჰალე (ზაალე)]], [[გერმანია]];  † [[4 ივნისი]], [[1942]], [[პრაღა]], [[ჩეხეთი]]) - [[მესამე რაიხი|მესამე რაიხის]] ხანის [[გერმანია|გერმანიის]] სახელმწიფო და სამხედრო მოღვაწე, [[სს]]-ის [[ობერგრუპენფიურერი]] და პოლიციის [[გენერალი]], [[რაიხის უშიშროების მთავარი სამმართველო|რაიხის უშიშროების მთავარი სამმართველოს]] ([[RSHA]]) ხელმძღვანელი, [[ბოჰემია|ბოჰემიის]] და [[მორავია|მორავიის]] [[რაიხსპროტექტორი|რაიხსპროტექტორის]] მოადგილე.
 
 
 ==ბიოგრაფია==
@@ -24,11 +24,11 @@
 
 [[სურათი:Heydrich1.jpg|thumb|200px|ჰაიდრიხი, რაინჰარდ]]
 
-*[[1931]] - ''აპრილი:'' [[ადმირალი|ადმირალ]] [[რედერი, ერიხ|ერიხ რედერის]] ინიციატივით ჰაიდრიხი "უღირსი საქციელისათვის" დათხოვილ იქნა ფლოტიდან. მიზეზი იყო ჰაიდრიხის მიერ გაუქმებული ნიშნობა.''ივნისი-ივლისი:'' ჰაიდრიხი კონტაქტს ამყარებს [[ჰიმლერი, ჰაინრიხ|ჰაინრიხ ჰიმლერთან]] და ხდება [[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|ნაციონალ-სოციალისტური პარტიის]] ([[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|NSDAP]]) და [[SS]]-ის წევრი. ჰიმლერი მას ავალებს პარტიის სადაზვერვო და უშიშროების სამსახურის, შემდგომში [[SD]]-ს ჩამოყალიბებას. ''დეკემბერი:'' ჰაიდრიხი ქორწინდება ლინა ფონ ოსტენზე, რომლეთანაც მას 4 შვილი შეეძინება.
+*[[1931]] - ''აპრილი:'' [[ადმირალი|ადმირალ]] [[რედერი, ერიხ|ერიხ რედერის]] ინიციატივით ჰაიდრიხი "უღირსი საქციელისათვის" დათხოვილ იქნა ფლოტიდან. მიზეზი იყო ჰაიდრიხის მიერ გაუქმებული ნიშნობა.''ივნისი-ივლისი:'' ჰაიდრიხი კონტაქტს ამყარებს [[ჰიმლერი, ჰაინრიხ|ჰაინრიხ ჰიმლერთან]] და ხდება [[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|ნაციონალ-სოციალისტური პარტიის]] ([[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|NSDAP]]) და [[სს]]-ის წევრი. ჰიმლერი მას ავალებს პარტიის სადაზვერვო და უშიშროების სამსახურის, შემდგომში [[SD]]-ს ჩამოყალიბებას. ''დეკემბერი:'' ჰაიდრიხი ქორწინდება ლინა ფონ ოსტენზე, რომლეთანაც მას 4 შვილი შეეძინება.
 
-*[[1932]] - ''ივნისი:'' ჰაიდრიხი ახლადშექმნილი [[SD]]-ს ხელმძღვანელი ხდება. ამ დროისათვის იგი უკვე [[ჰიმლერი, ჰაინრიხ|ჰიმლერის]] უახლოესი თანამშრომელი და [[SS]]-ის [[შტანდარტენფიურერი|შტანდარტენფიურერია]]
+*[[1932]] - ''ივნისი:'' ჰაიდრიხი ახლადშექმნილი [[SD]]-ს ხელმძღვანელი ხდება. ამ დროისათვის იგი უკვე [[ჰიმლერი, ჰაინრიხ|ჰიმლერის]] უახლოესი თანამშრომელი და [[სს]]-ის [[შტანდარტენფიურერი|შტანდარტენფიურერია]]
 
-*[[1933]] - ''თებერვალი:'' [[გერმანია|გერმანიაში]] [[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|ნაცისტების]] ხელისუფლებაში მოსვლის შემდეგ იგი გერმანული დელეგაციის წევრია [[ჟენევა|ჟენევის]] მოლაპარაკებებზე, რომელზეც განიარაღების საკითხები განიხილებოდა. მისი პროვოცირებადი საქციელის გამო იგი მალევე უკან იქნა გამოძახებული. ''მარტი:'' [[ჰელდი, ჰაინრიხ|ჰაირიხ ჰელდის]] და [[ბავარია|ბავარიის]] მთავრობის დამხობის შემდეგ ჰაიდრიხი ხდება ბავარიის პოლიტპოლიციის უფროსი და იწყებს ოპოზიციური ძალების წევრთა სისტემატიურ დაშინება-დატერორებას ამ უკანასკნელთა [[საკონცენტრაციო ბანაკი|საკონცენტრაციო ბანაკ]] [[დახაუ|დახაუში]] ჩასმით. ''ნოემბერი:'' [[SD]] ხდება მეხუთე მთავარი სამმართველო [[SS]]-ის შემადგენლობაში და დ [[ჰიმლერი, ჰაინრიხ|ჰიმლერის]], როგორც [[SS]]-ის [[რაიხსფიურერი|რაიხსფიურერის]], პირდაპირ დაქვემდებარებაში გადადის.
+*[[1933]] - ''თებერვალი:'' [[გერმანია|გერმანიაში]] [[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|ნაცისტების]] ხელისუფლებაში მოსვლის შემდეგ იგი გერმანული დელეგაციის წევრია [[ჟენევა|ჟენევის]] მოლაპარაკებებზე, რომელზეც განიარაღების საკითხები განიხილებოდა. მისი პროვოცირებადი საქციელის გამო იგი მალევე უკან იქნა გამოძახებული. ''მარტი:'' [[ჰელდი, ჰაინრიხ|ჰაირიხ ჰელდის]] და [[ბავარია|ბავარიის]] მთავრობის დამხობის შემდეგ ჰაიდრიხი ხდება ბავარიის პოლიტპოლიციის უფროსი და იწყებს ოპოზიციური ძალების წევრთა სისტემატიურ დაშინება-დატერორებას ამ უკანასკნელთა [[საკონცენტრაციო ბანაკი|საკონცენტრაციო ბანაკ]] [[დახაუ|დახაუში]] ჩასმით. ''ნოემბერი:'' [[SD]] ხდება მეხუთე მთავარი სამმართველო [[სს]]-ის შემადგენლობაში და დ [[ჰიმლერი, ჰაინრიხ|ჰიმლერის]], როგორც [[სს]]-ის [[რაიხსფიურერი|რაიხსფიურერის]], პირდაპირ დაქვემდებარებაში გადადის.
 
 *[[1934]] - ''იანვარი:'' ჰაიდრიხი ხდება გერმანული ლანდების (გარდა [[პრუსია|პრუსიისა]]) პოლიტპოლიციის (''გერმ.'' ''Politische Polizei'') უფროსი.  ''აპრილი:'' პრუსიის [[გესტაპო]] ჰაიდრიხის დაქვემდებარებაში გადადის.  ''ივლისი:'' [[რიომი, ერნსტ|რიომის]] პუტჩის ჩახშობაში შეტანილი წვლილის გამო იგი [[SS]]-ის [[გრუპენფიურერი]] ხდება.
 
@@ -42,7 +42,7 @@
 
 *[[1941]] - ''[[29 სექტემბერი]]:'' [[ჰიტლერი, ადოლფ|ჰიტლერის]] ბრძანებით ჰაიდრიხი ინიშნება "[[ბოჰემიის და მორავიის პროტექტორატი|ბოჰემიის და მორავიის პროტექტორატის]]"  (''გერმ. Protektorat Böhmen und Mähren'') [[შტატჰალტერი|შტატჰალტერად]]. ამ თანამდებობაზე იგი ცვლის [[ბარონი|ბარონ]] [[ნოირატი, კონსტანტინ ფონ|კონსტანტინ ფონ ნოირატს]].
 
-*[[1942]] - ''[[27 მაისი]]:'' [[ლონდონი|ლონდონში]] ემიგრირებული [[ჩეხეთი|ჩეხეთის]] მთავრობის მიერ გაგზავნილი დივერსანტები ცეცხლს უხსნიან ჰაიდრიხის მანქანას [[პრაღა|პრაღაში]]. ჰაიდრიხი [[ხელყუმბარა|ხელყუმბარის]] ნამსხვრევით სასიკვდილოდ იქნა დაჭრილი. თავდასხმელებმა თავი შეაფარეს ერთ-ერთ ახლომდებარე ეკლესიას, თუმცა [[SS]]-ის ალყას თავი ვერ დააღწიეს და ყველანი ეკლესიაში იქნენ ჩახოცილები. ''[[4 ივნისი]]:'' რაინჰარდ ჰაიდრიხი თავდასხმის შედეგად მიღებული ჭრილობების შედეგად გარდაიცვალა. ''[[10 ივნისი]]:'' ჰაიდრიხის მკვლელობისათვის [[SS]]-მა საზარელი შურისძიების სპექტაკლი მოაწყო [[ჩეხეთი|ჩეხეთის]] სოფელ ლიდიცეში, რომლის მოსახლეობის მამაკაცები (15 წელს ზემოთ) სიკვდილით იქნენ დასჯილები, ხოლო ქალები და ბავშვები საკონცენტრაციო ბანაკებში იქნენ დეპორტირებულები.
+*[[1942]] - ''[[27 მაისი]]:'' [[ლონდონი|ლონდონში]] ემიგრირებული [[ჩეხეთი|ჩეხეთის]] მთავრობის მიერ გაგზავნილი დივერსანტები ცეცხლს უხსნიან ჰაიდრიხის მანქანას [[პრაღა|პრაღაში]]. ჰაიდრიხი [[ხელყუმბარა|ხელყუმბარის]] ნამსხვრევით სასიკვდილოდ იქნა დაჭრილი. თავდასხმელებმა თავი შეაფარეს ერთ-ერთ ახლომდებარე ეკლესიას, თუმცა [[სს]]-ის ალყას თავი ვერ დააღწიეს და ყველანი ეკლესიაში იქნენ ჩახოცილები. ''[[4 ივნისი]]:'' რაინჰარდ ჰაიდრიხი თავდასხმის შედეგად მიღებული ჭრილობების შედეგად გარდაიცვალა. ''[[10 ივნისი]]:'' ჰაიდრიხის მკვლელობისათვის [[სს]]-მა საზარელი შურისძიების სპექტაკლი მოაწყო [[ჩეხეთი|ჩეხეთის]] სოფელ ლიდიცეში, რომლის მოსახლეობის მამაკაცები (15 წელს ზემოთ) სიკვდილით იქნენ დასჯილები, ხოლო ქალები და ბავშვები საკონცენტრაციო ბანაკებში იქნენ დეპორტირებულები.
    
 
 [[კატეგორია:გერმანელები]]
