--- a/ჰაინრიხ_ჰიმლერი.mw
+++ b/ჰაინრიხ_ჰიმლერი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Himmler.jpg|thumb|170px|ჰაინრიხ ჰიმლერი]]
-'''ჰიმლერი, ჰაინრიხ''' ''([[გერმანული ენა|გერმ.]] Heinrich Himmler)'' ( * [[7 ოქტომბერი]] [[1900]], [[მიუნხენი]], [[გერმანია]]; † [[23 მაისი]] [[1945]], [[ლიუნებურგი]], [[გერმანია]]) - გერმანელი პოლიტიკური მოღვაწე, "[[SS]]"-ის [[რაიხსფიურერი]] [[1936]] - [[1945]] წ.წ., [[მესამე რაიხი|მესამე რაიხის]] შინაგან საქმეთა მინისტრი [[1943]] - [[1945]] წ.წ.
+'''ჰიმლერი, ჰაინრიხ''' ''([[გერმანული ენა|გერმ.]] Heinrich Himmler)'' ( * [[7 ოქტომბერი]] [[1900]], [[მიუნხენი]], [[გერმანია]]; † [[23 მაისი]] [[1945]], [[ლიუნებურგი]], [[გერმანია]]) - გერმანელი პოლიტიკური მოღვაწე, "[[სს]]"-ის [[რაიხსფიურერი]] [[1936]] - [[1945]] წ.წ., [[მესამე რაიხი|მესამე რაიხის]] შინაგან საქმეთა მინისტრი [[1943]] - [[1945]] წ.წ.
 
 
 
@@ -29,11 +29,11 @@
 *[[1926]] - [[1930]] 
 :იყო [[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|ნაცისტური პარტიის]] პროპაგანდის განყოფილების უფროსის მოადგილე.
 *[[1927]] 
-:გადაყვანილ იქნა "[[SS]]"-ის რაიხსფიურერის მოადგილის თანამდებობაზე.
+:გადაყვანილ იქნა "[[სს]]"-ის რაიხსფიურერის მოადგილის თანამდებობაზე.
 *[[1928]] 
-:''[[3 ივლისი]]:'' იქორწინა მასზე 8 წლით უფროსს მარგარეთე ბოდენზე ''(გერმ. Margarethe Boden)''. თავის მეუღლესთან ერთად მცირე ხნის განმავლობაში საკუთარი ქათმების ფერმაში იყო დაკავებული, თუმცა ამ ბიზნესს წარმატება არ მოჰყოლია.    
+:''[[3 ივლისი]]:'' იქორწინა მასზე 8 წლით უფროსს მარგარეთე ბოდენზე ''([[გერმ]]. Margarethe Boden)''. თავის მეუღლესთან ერთად მცირე ხნის განმავლობაში საკუთარი ქათმების ფერმაში იყო დაკავებული, თუმცა ამ ბიზნესს წარმატება არ მოჰყოლია.    
 *[[1929]] 
-:''[[6 იანვარი]]:'' ჰიმლერი დაინიშნა "[[SS]]"-ის რაიხსფიურერის თანამდებობაზე. ამ დროს "[[SS]]" 280 წევრს ითვლიდა და ექვემდებარებოდა "[[SA]]"-ს. ჰიმლერის "[[SS]]"-ის საწევრო ნომერი იყო "166".
+:''[[6 იანვარი]]:'' ჰიმლერი დაინიშნა "[[სს]]"-ის რაიხსფიურერის თანამდებობაზე. ამ დროს "[[სს]]" 280 წევრს ითვლიდა და ექვემდებარებოდა "[[SA]]"-ს. ჰიმლერის "[[სს]]"-ის საწევრო ნომერი იყო "166".
 [[სურათი:HimmlerHeydrich.jpg|thumb|170px|ჰიმლერი და ჰაიდრიხი]]
 *[[1930]] 
 :"[[SS]]" დამოუკიდებელი ორგანიზაცია ხდება. ჰიმლერი ვეზერ-ემსის საარჩევნო უბნიდან [[რაიხსტაგი|რაიხსტაგში]] იქნა არჩეული.
@@ -41,21 +41,21 @@
 :''[[აპრილი]]:'' "[[SA]]"-ს ბუნტის დროს ჰიმლერმა უპირობო ლოიალიტეტი გამოავნინა ფიურერის წინაშე. მისი დავალებით [[ჰაიდრიხი, რაინჰარდ|რაინჰარდ ჰაიდრიხმა]] ჩამოაყალიბა პარტიის უშიშროების სამსახური - "[[SD]]".
 *[[1932]] 
 :''[[25 იანვარი]]:'' ჰიმლერი დაინიშნა [[მიუნხენი|მიუნხენის]] "ყავისფერი სახლის" ''("[[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტის|NSDAP]]"-ის შტაბბინა)'' უშიშროების შეფად. 
-:''[[დეკემბერი]]:'' "[[SS]]"-ის წევრების რიცხვმა 50.000 მიაღწია. დაიწყო ჩამოყალიბება "მმართველი ორდენის", მკაცრად განსაზღვრული რასისტული "ბიოლოგიური სელექციის" და "ქორწინების კანონის" გათვალისწინებით. 
+:''[[დეკემბერი]]:'' "[[სს]]"-ის წევრების რიცხვმა 50.000 მიაღწია. დაიწყო ჩამოყალიბება "მმართველი ორდენის", მკაცრად განსაზღვრული რასისტული "ბიოლოგიური სელექციის" და "ქორწინების კანონის" გათვალისწინებით. 
 *[[1933]] 
 :''[[მარტი]]:'' ჰიტლერის ხელისუფლებაში მოსვლის შემდეგ ჰიმლერი დაინიშნა [[მიუნხენი|მიუნხენის]] პოლიციის შეფად. პარალელურად იგი ხელმძღვანელობდა პირველი [[საკონცენტრაციო ბანაკი|საკონცენტრაციო ბანაკის]] მშენებლობას [[დახაუ|დახაუში]]. 
 :''[[1 აპრილი]]:'' ჰიმლერი გადაიყვანეს [[ბავარია|ბავარიის]] პოლიციის პოლიტიკური ხელმძღვანელის თანამდებობაზე.
 *[[1934]] 
 :''[[იანვარი]]:'' გერმანული [[მიწა (გერმანია)|მიწა]] დამოუკიდებლობის დაკარგვის შემდეგ ჰიმლერის ხელში მოექცა მთელი რაიხის პოლიციის აპარატი ''([[პრუსია|პრუსიის]] და [[შაუმბურგ-ლიპე (მიწა)|შაუმბურგ-ლიპეს]] გარდა)''. 
-:''[[20 აპრილი]]:'' [[გიორინგი, ჰერმან|ჰერმან გიორინგის]] ბრძანებით იგი დაინიშნა "[[გესტაპო]]"-ს შეფად. გესტაპოს და "[[SD]]"-ს ცენტრალიზებით ჰიმლერმა შეძლო დამოუკიდებლობა მოეპოვებინა "[[SA]]"-გან და ეს ორგანიზაციები ჩამოეყალიბებინა [[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|ნაცისტური პარტიის]] ერთადერთ სადაზვერვო და უშიშროების სამსახურად. ამ პერიოდში უზომოდ გაიზარდა "[[SS]]"-ის გავლენა. 
-:''[[ივნისი]]:'' ჰიმლერი და "[[SS]]" წამყვან როლს თამაშობენ [[რიომის პუტჩი|რიომის პუტჩის]] შენიღბულ "[[SA]]"-ს უმაღლესი ხელმძღვანელობის წინააღმდეგ ჩადენილ მკვლელობებში. ''ივლისი:'' ჰიმლერი, როგორ "[[SS]]"-ის [[რაიხსფიურერი]] ჰიტლერის უშუალო დაქვემდებარებაში გადადის. "[[SS]]" გადაეცა საკონცენტრაციო ბანაკების რეორგანიზაციის და მართვის უფლებები მთალი გერმანიის მასშტაბით. ბანაკების საყარაულო პერსონალი ამიერიდან სპეციალურად გაწვრთნილი "მკვდარი თავის ქალას შენაერთებიდან" ''(გერმ. Totenkopfverbände)'' კომპლექტდებოდა.
+:''[[20 აპრილი]]:'' [[გიორინგი, ჰერმან|ჰერმან გიორინგის]] ბრძანებით იგი დაინიშნა "[[გესტაპო]]"-ს შეფად. გესტაპოს და "[[SD]]"-ს ცენტრალიზებით ჰიმლერმა შეძლო დამოუკიდებლობა მოეპოვებინა "[[SA]]"-გან და ეს ორგანიზაციები ჩამოეყალიბებინა [[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|ნაცისტური პარტიის]] ერთადერთ სადაზვერვო და უშიშროების სამსახურად. ამ პერიოდში უზომოდ გაიზარდა "[[სს]]"-ის გავლენა. 
+:''[[ივნისი]]:'' ჰიმლერი და "[[სს]]" წამყვან როლს თამაშობენ [[რიომის პუტჩი|რიომის პუტჩის]] შენიღბულ "[[SA]]"-ს უმაღლესი ხელმძღვანელობის წინააღმდეგ ჩადენილ მკვლელობებში. ''ივლისი:'' ჰიმლერი, როგორ "[[სს]]"-ის [[რაიხსფიურერი]] ჰიტლერის უშუალო დაქვემდებარებაში გადადის. "[[სს]]" გადაეცა საკონცენტრაციო ბანაკების რეორგანიზაციის და მართვის უფლებები მთალი გერმანიის მასშტაბით. ბანაკების საყარაულო პერსონალი ამიერიდან სპეციალურად გაწვრთნილი "მკვდარი თავის ქალას შენაერთებიდან" ''([[გერმ.]] Totenkopfverbände)'' კომპლექტდებოდა.
 *[[1936]] 
 :''[[17 ივნისი]]:'' ჰიმლერი დაინიშნა გერმანული პოლიციის შეფად.
 *[[1937]] 
 :მისი ბრძანებით გესტაპომ დაიწყო ნაცისტური რეჟიმის მოწინააღმდეგეების სასამრთლოს გვერდია ავლით [[საკონცენტრაციო ბანაკი|საკონცენტრაციო ბანაკებში]] მოთავსება.
 *[[1938]] 
 :''[[თებერვალი]]:'' "[[SD]]" ინფორმანტების წყალობით ჰილმერმა მოამზადა მაკომპრომეტირებელი საქმე ("[[ფრიჩ-ბლომბერგის-საქმე]]"), რომელის შემდეგაც თანამდებობები დატოვეს [[ბლომბერგი, ვერნერ ფონ|ვერნერ ფონ ბლომბერგმა]] და [[ფრიჩი, ვერნერ ფონ|ბარონმა ვერნერ ფონ ფრიჩმა]]. 
-:''[[აგვისტო]]:'' ჰიტლერის ბრძანებით "[[SS]]"-ის შეიარაღებული ძალები ვერმახტს შეურთდა, თუმცა ხელმძღვანელობა მაინც ჰიმლერის ხელში დარჩა.
+:''[[აგვისტო]]:'' ჰიტლერის ბრძანებით "[[სს]]"-ის შეიარაღებული ძალები ვერმახტს შეურთდა, თუმცა ხელმძღვანელობა მაინც ჰიმლერის ხელში დარჩა.
 *[[1939]] 
 :''[[27 სექტემბერი]]:'' [[მეორე მსოფლიო ომი|მეორე მსოფლიო ომთან]] დაკავშირებით დაარსებულ იქნა "[[რაიხის უშიშროების მთავარი სამმართველო]]" ([[რსჰა]]), რომლის დაქვემდებარებაში გადავიდა გესტაპო, [[კრიპო]] და "[[SD]]". "რსჰა"-ს შეფად დაინიშნა [[ჰაიდრიხი, რაინჰარდ|რაინჰარდ ჰაიდრიხი]]. 
 :''[[7 ოქტომბერი]]:'' ჰიმლერი დაინიშნა "გერმანელი ხალხის გაძლიერების საქმის" [[რაიხსკომისარი|რაიხსკომისრად]]. მას დაევალა დაპყრობილ ტერიტორიებზე რასობრივი წმენდის და გადასახლებების გატარება.
@@ -74,7 +74,7 @@
 *[[1944]]
 :''[[თებერვალი]]:'' [[კანარისი, ვილჰელმ|ადმირალ კანარისის]] დამხობისა და [[აბვერი|აბვერის]] "[[SD]]"-ზე დაქვემდებარებით ჰიმლერის ხელში მოექცა მთელი მესამე რაიხის სადაზვერვო სისტემა.
 :''[[21 ივლისი]]:'' ჰიტლეზე განხორციელები [[1944 წლის 20 ივლისის პუტჩი|პუტჩის]] შემდგომ ჰიმლერის ძალაუფლება კიდევ უფრო გაიზარდა. იგი [[გენერალი|გენერალ-მაიორ]] [[ფრომი, ფრიდრიხ|ფრიდრიხ ფრომის]] ნაცვლად დანიშნულ იქნა სარეზერვო ჯარების და არმიის აღჭურვილობის შეფად.
-:''[[2 დეკემბერი]]:'' იგი დანიშნულ იქნა ზემო რაინის არმიათ ჯგუფის მტავარსარდლად და სათავეში ჩაუდგა თავდაცვითი ხაზის მშენებლობას.
+:''[[2 დეკემბერი]]:'' იგი დანიშნულ იქნა ზემო რაინის არმიათ ჯგუფის მთავარსარდლად და სათავეში ჩაუდგა თავდაცვითი ხაზის მშენებლობას.
 *[[1945]]
 :''[[იანვარი]]:'' წითელი არმიის მიერ ვისლაზე განხორციელებული გარღვევით სააშკარაოზე გამოვიდა ჰიმლერის, როგორც მთავარსადლის უუნარობა. პასუხისმგებლობის თავიდან აცილების მიზნით მან თავი დაჭრილთა ლაზარეთს შეაფარა.
 :''[[მარტი]]:'' მთავარსარდლის პოსტიდან გადაყენების შემდეგ ჰიმლერი შეეცადა კავშირი დაემყარებინა დასავლეთელ მოკავშირეებთან და დაედო მათთან სეპარატიული ზავი.
@@ -84,6 +84,7 @@
 
 
 [[კატეგორია:გერმანელები]]
+[[კატეგორია:გერმანელი სამხედრო მოღვაწეები]]
 [[კატეგორია:დაბადებული 1900]]
 [[კატეგორია:გარდაცვლილი 1945]]
 
