--- a/ჰერმან_გერინგი.mw
+++ b/ჰერმან_გერინგი.mw
@@ -1,5 +1,5 @@
 [[სურათი:HermanGöring.jpg|thumb|180px|ჰერმან გიორინგი]]
-'''გიორინგი, ჰერმან ვილჰელმ''' (''გერმ. Hermann Wilhelm Göring'') ( * [[12 იანვარი]] [[1893]], [[როზენჰაიმი]], [[გერმანია]]; † [[15 ოქტომბერი]] [[1946]], [[ნიურნბერგი]], [[გერმანია]]) - გერმანელი პოლიტიკური და სამხედრო მოღვაწე, [[პირველი მსოფლიო ომი|პირველი მსოფლიო ომის]] გმირი, [[რაიხსმარშალი]], [[პრუსია|პრუსიის]]  პრემიერ- და შინაგან საქმეთა მინისტრი, [[მესამე რაიხი|ნაცისტური გერმანიის]] საჰაერო მიმოსვლის (''Luftfahrt'') მინისტრი.
+'''გიორინგი, ჰერმან ვილჰელმ''' (''[[გერმ.]] Hermann Wilhelm Göring'') ( * [[12 იანვარი]] [[1893]], [[როზენჰაიმი]], [[გერმანია]]; † [[15 ოქტომბერი]] [[1946]], [[ნიურნბერგი]], [[გერმანია]]) - გერმანელი პოლიტიკური და სამხედრო მოღვაწე, [[პირველი მსოფლიო ომი|პირველი მსოფლიო ომის]] გმირი, [[რაიხსმარშალი]], [[პრუსია|პრუსიის]]  პრემიერ- და შინაგან საქმეთა მინისტრი, [[მესამე რაიხი|ნაცისტური გერმანიის]] საჰაერო მიმოსვლის (''Luftfahrt'') მინისტრი.
 
 
 
@@ -29,7 +29,7 @@
 === მესამე რაიხის ხანაში ===
 
 [[სურათი:GöringWedding.jpg|thumb|180px|გიორინგის ქორწინება]]
-[[1933]] წლის [[30იანვარი|30 იანვარს]] ჰიტლერის ხელისუფლებაში მოსვლის შემდეგ გიორინგი "უპორტფელო მინისტრი" გახდა. ჰიტლრმა მის დაქვემდებარებაში გადაიყვანა "პრუსიის შინაგან საქმეთა რაიხსკომისარიატი", რაც იმას ნიშნავდა, რომ გიორინგი მთელი გერმანიის პოლიციის შეფი გახდა. ამ თანამდებობაზე მისი პირველი ნაბიჯები იყო პოლიციის რიგების "[[SA]]"-ს, "[[SS]]"-ის და "[[შტალჰელმი|შტალჰელმის]]" წევრებით შევსება და "[[გესტაპო|გესტაპოს]]" დაარსება, რომლიც  შეფად გიორინგმა თავისი ნათესავი [[დიელსი, რუდოლფ|რუდოლფ დიელსი]] დანიშნა. იმავე წლის [[10 აპრილი|10 აპრილს]] გიორინგი დაინიშნა [[პრუსია|პრუსიის]] პრემიერ-მინისტრად (''გერმ. Ministerpräsident''). მაისში იგი გახდა "საჰაერო მიმოსვლის" მინისტრი და "რაიხის მეტყევეთა და მონადირეთა უფროსი" (''გერმ. Reichsforst- und Reichsjägermeister''). [[1930]] წლის აგვისტოში ჰინდენბურგმა მას [[გენერალი|გენერლის]] წოდება მიანიჭა.
+[[1933]] წლის [[30იანვარი|30 იანვარს]] ჰიტლერის ხელისუფლებაში მოსვლის შემდეგ გიორინგი "უპორტფელო მინისტრი" გახდა. ჰიტლრმა მის დაქვემდებარებაში გადაიყვანა "პრუსიის შინაგან საქმეთა რაიხსკომისარიატი", რაც იმას ნიშნავდა, რომ გიორინგი მთელი გერმანიის პოლიციის შეფი გახდა. ამ თანამდებობაზე მისი პირველი ნაბიჯები იყო პოლიციის რიგების "[[SA]]"-ს, "[[სს]]"-ის და "[[შტალჰელმი|შტალჰელმის]]" წევრებით შევსება და "[[გესტაპო|გესტაპოს]]" დაარსება, რომლიც  შეფად გიორინგმა თავისი ნათესავი [[დიელსი, რუდოლფ|რუდოლფ დიელსი]] დანიშნა. იმავე წლის [[10 აპრილი|10 აპრილს]] გიორინგი დაინიშნა [[პრუსია|პრუსიის]] პრემიერ-მინისტრად (''გერმ. Ministerpräsident''). მაისში იგი გახდა "საჰაერო მიმოსვლის" მინისტრი და "რაიხის მეტყევეთა და მონადირეთა უფროსი" (''გერმ. Reichsforst- und Reichsjägermeister''). [[1930]] წლის აგვისტოში ჰინდენბურგმა მას [[გენერალი|გენერლის]] წოდება მიანიჭა.
 
 [[სურათი:GörStand.jpg|thumb|left|130px|რაიხსმარშლის ალამი]]
 [[1934]] წელს გიორინგი დაკავებული იყო პოლიტიკური მტრების განადგურებით. ამ საქმეში მისი თანამზრახველები იყვნენ [[ჰიმლერი, ჰაინრიხ|ჰაინრიხ ჰიმლერი]] და [[ჰაიდრიხი, რაინჰარდ|რაინჰარდ ჰაიდრიხი]]. [[1935]] წელს გიორინგმა ჩაიბარა ხელახლა დაარსებული "[[გერმანიის საჰაერო ძალები|Luftwaffe]]"-ეს მთავარსარდლობა და იმავე წლის [[10 აპრილი|10 აპრილს]] მეორედ იქორწინა. ამჯერად მსახიობ ემი ზონემანზე (''გერმ. Emmy Sonnemann''), რომელთანაც შეეძინა ქალიშვილი ედა. [[1936]] წელს "Luftwaffe"-ემ პირველი საბრძოლო ნათლობა მიიღო [[ესპანეთის სამოქალაქოომი|ესპანეთის სამოქალაქო ომში]]. გიორინგის ბრძანებით "ლეგიონი კონდორი" [[დიქტატორი|დიქტატორ]] [[ფრანკო, ფრანსისკო|ფრანსისკო ფრანკოს]] მხარეზე იბრძოდა. [[1936]] წლის [[18 ოქტომბერი|18 ოქტომბერს]] გიორინგი დაინიშნა "ოთხწლიანი გეგმის" ხელმძღვანელად და დაევალა გერმანიის მსხვილ ინდუსტრიის მაგნატებთან მჭიდრო თანამშრომლობით ქვეყნის საომარი მდგომარეობისათვის მომზადება. ამ მიზნით [[1937]] წელს დაარსებული იქნა "ჰერმან გიორინგის საიმპერიო საამქროები" (''გერმ. Reichswerke Hermann-Göring''), რომელიც [[1944]] წლამდე 12 ქარხნით და 228 საამქროთი მსოფლიოს უმსხვილესი ფოლადის მწარმოებელი კონცერნი იყო.
