--- a/იოზეფ_დიტრიხი.mw
+++ b/იოზეფ_დიტრიხი.mw
@@ -1,5 +1,5 @@
 [[სურათი:SeppDietrich.jpg|thumb|150px|ზეპ დიტრიხი]]
-'''დიტრიხი, იოზეფ''' ''იგივე '''ზეპ დიტრიხი''''' ''(გერმ. Josef „Sepp“ Dietrich )'' ( *[[28 მაისი]] [[1892]], ჰავანგენი ([[ბავარია]]), [[გერმანია]]; † [[24 აპრილი]] [[1966]], [[ლუდვიგსბურგი]], [[გერმანია]]) - გერმანელი სამხედრო მოღვაწე, "[[SS]]"-ის [[ობერსტგრუპენფიურერი]] და "[[Waffen-SS]]"-ის [[გენერალ-პოლკოვნიკი]].
+'''დიტრიხი, იოზეფ''' ''იგივე '''ზეპ დიტრიხი''''' ''([[გერმ.]] Josef „Sepp“ Dietrich )'' ( *[[28 მაისი]] [[1892]], ჰავანგენი ([[ბავარია]]), [[გერმანია]]; † [[24 აპრილი]] [[1966]], [[ლუდვიგსბურგი]], [[გერმანია]]) - გერმანელი სამხედრო მოღვაწე, "[[სს]]"-ის [[ობერსტგრუპენფიურერი]] და "[[Waffen-SS]]"-ის [[გენერალ-პოლკოვნიკი]].
 
 
 
@@ -7,6 +7,7 @@
 
 
 [[კატეგორია:გერმანელები]]
+[[კატეგორია:გერმანელი სამხედრო მოღვაწეები]]
 [[კატეგორია:დაბადებული 1892]]
 [[კატეგორია:გარდაცვლილი 1966]]
 
