*Empty MediaWiki Message*

--- a/გუგენჰაიმის_მუზეუმი_(ბილბაო).mw
+++ b/გუგენჰაიმის_მუზეუმი_(ბილბაო).mw
@@ -3,7 +3,18 @@
 
 შენობის სტრუქტურის პროექტი ეკუთვნის [[გერი, ფრენკ|ფრენკ გერის]] არქიტექტურულ ფირმას, საზოგადოებისთვის 1997 წელს გაიხსნა და მყისვე მოიხვეჭა მსოფლიოს ყველაზე წარმტაცი შენობის სახელი [[დეკონსტრუქტივიზმი|დეკონსტრუქტივიზმის]] სტილში. მუზეუმის შენობის დიზაინი და კონსტრუქცია ფრენკ გერის სტილისა და მეთოდის შესწავლის სანიმუშო მაგალითია. გერის სხვა ნამუშევართა მსგავსად მუზეუმის სტრუქტურა შედგება რადიკალურად ნაგები ორგანული კონტურებისგან. მუზეუმის მტკიცებით შენობას არცერთი ბრტყელი ზედაპირი არ გააჩნია მთელ სტრუქტურაში. შენობის ნაწილს ჰკვეთს ავტოსტრადა, და სტრუქტურის უდიდესი ნაწილი დაფარულია სიფრიფანა [[ტიტანიუმი|ტიტანიუმის]] პანელებით.
 
-{{ითარგმნება}}
+[[სურათი:Guggenheim dog.jpg|thumb|left|ჯეფ კუნსის ლეკვი, 1992.]]
+შენობა, რომელიც საპორტო ქალაქში დგას, შორიდან აფრიან გემს ჰგავს. მისი ამრეკლი პანელები თევზის ქერცლს ემსგავსება, რაც გამოძახილია გერის დიზაინში განმეორებადი სხვა ორგანული ფორმების და ერწყმის მდინარე ნერვიონს, რომლის პირასაც ის მდებარეობს. შენობა იმენად ჰაეროვანია, რომ შთაბეჭდილებას ქმნის თითქოს დღის სხვადასხვა მონაკვეთში ფორმას იცვლიდეს, როცა ქუჩის მხრიდან აკვირდები.
+
+ასევე გერის სიტლისთვის ტიპიურად შენობა ტექნოლოგიის პერიოდის უნიკალური პროდუქტია. შენობის კონსტრუქციის შექმნაში უდიდესი წვლილი მიუძღვის კომპიუტერულ გრაფიკასა და ვიზუალიზაციებს. კომპიუტერულმა სიმულაციებმა შესაძლებლობა მისცა ინჟინრებს შეექმნად ისეთი ფორმები, რომელიც ადრეული პერიოდის არქიტექტორებისთვის თითქმის მიუწვდომელი იყო. კონსტრუქციის მშენებლობის დროს ქვის პანელები ლაზერით დაიჭრა.
+
+ასევე მნიშვნელოვანია, რომ მიუხედავად შენობის ფასადის გრანდიოზულობისა მდინარის მხრიდან, ის საკმაოდ სადად გამოიყრება ქუჩის მხრიდან და მის შემოგარენს არ ჩრდილავს.
+
+მუზეუმისთვის ეს ადგილი შეირჩა ქალაქ ბილბაოსა და მთლიანად ბასკეთის ეკონომიკური და კულტურული გადახალისების მცდელობის პროექტის ფარგლებში. შენობის გახსნიდან თითქმის მყისვე ბილბაო ტურისტების პოპულარული ადგილი გახდა, მოიზიდა რა დამთვალიერებლები მთელი მსოფლიოდან. როგორც ამბობენ, მუზეუმმა ბილბაო მსოფლიო რუქაზე დასვა.
+
+მუზეუმის გამოფენები ხშირად იცვლება, თუმცა ყველაზე ხშირად აქ მე-20 საუკუნის ხელოვნება ჭარბობს და ტრადიციულ ფერწერასა და სკულპტურებს მუზეუმი უფრო ინსტალაციურ და ელექტრონულ ფორმებს ამჯობინებს. ზოგიერთი ხელოვნებათმცოდნის შეფასებით თაავდ შენობა იმდენად შთამბეჭდავია, რომ ის სრულიად ჩრდილავს მუზეუმის კოლექციას.
+[[სურათი:Guggenheim-bilbao-jan05.jpg|400px|center|მუზეუმის ხედი მდინარიდან]]
+
 ==რესურსები ინტერნეტში==
 *[http://www.guggenheim-bilbao.es/ingles/home.htm ოფიციალური ვებ-გვერდი]
 
