*Empty MediaWiki Message*

--- a/გუგენჰაიმის_მუზეუმი_(ბილბაო).mw
+++ b/გუგენჰაიმის_მუზეუმი_(ბილბაო).mw
@@ -13,7 +13,7 @@
 მუზეუმისთვის ეს ადგილი შეირჩა ქალაქ ბილბაოსა და მთლიანად ბასკეთის ეკონომიკური და კულტურული გადახალისების მცდელობის პროექტის ფარგლებში. შენობის გახსნიდან თითქმის მყისვე ბილბაო ტურისტების პოპულარული ადგილი გახდა, მოიზიდა რა დამთვალიერებლები მთელი მსოფლიოდან. როგორც ამბობენ, მუზეუმმა ბილბაო მსოფლიო რუქაზე დასვა.
 
 მუზეუმის გამოფენები ხშირად იცვლება, თუმცა ყველაზე ხშირად აქ მე-20 საუკუნის ხელოვნება ჭარბობს და ტრადიციულ ფერწერასა და სკულპტურებს მუზეუმი უფრო ინსტალაციურ და ელექტრონულ ფორმებს ამჯობინებს. ზოგიერთი ხელოვნებათმცოდნის შეფასებით თაავდ შენობა იმდენად შთამბეჭდავია, რომ ის სრულიად ჩრდილავს მუზეუმის კოლექციას.
-[[სურათი:Guggenheim-bilbao-jan05.jpg|400px|center|მუზეუმის ხედი მდინარიდან]]
+[[სურათი:Guggenheim-bilbao-jan05.jpg|500px|thumb|center|მუზეუმის ხედი მდინარიდან]]
 
 ==რესურსები ინტერნეტში==
 *[http://www.guggenheim-bilbao.es/ingles/home.htm ოფიციალური ვებ-გვერდი]
