--- a/ერნსტ_კალტენბრუნერი.mw
+++ b/ერნსტ_კალტენბრუნერი.mw
@@ -11,14 +11,14 @@
 *[[1923]] - კალტენბრუნერი იცვლის ფაკულტეტს. ქიმიის ნაცვლად იგი ეუფლება სამართალმცოდნეობას.
 *[[1928]] - ინსტიტუტის დამთავრების შემდეგ მუშაობას იწყებს ადვოკატად [[ლინცი|ლინცის]] საადვოკატო კანტორაში.
 *[[1930]] - ''[[18 ოქტომბერი]]:'' კალტენბრუნერი ხდება [[ავსტრია|ავსტრიის]] [[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|ნაციონალ-სოციალისტური მუშათა პარტიის]] წევრი.
-*[[1931]] - ''[[8 აგვისტო]]:'' კალტენბრუნერი [[SS]]-ის წევრი ხდება.
+*[[1931]] - ''[[8 აგვისტო]]:'' კალტენბრუნერი [[სს]]-ის წევრი ხდება.
 *[[1932]] - ისი სამუშაოდ გადადის მამამისის საადვოკატო კანტორაში და ამიერიდან უფასოდ ემსახურება ნაციონალ-სოციალისტებს.
 *[[1934 ]]- კალტენბრუნერი ქორწინდება ელისაბეთ ედერზე ''(გერმ: Elisabeth Eder)''. იმავე წელს ნაციონალ-სოციალისტების მიერ [[ვენა|ვენაში]] მოწყობილ პუტჩში მონაწილეობისათვის იგი დააპატიმრეს და 6 თვიანი პატიმრობა მიუსაჯეს კაიზერშტაინბრუხის ციხეში. სასამართლოს ძალით მას ჩამოერთვა ადვოკატის უფლებებიც.
 [[სურათი:72-904.jpg|right|thumb|200px|[[კაიტელი, ვილჰელმ|კაიტელი]], კალტენბრუნერი და [[როზენბერგი, ალფრედ|როზენბერგი]] [[ნიურნბერგის პროცესი|ნიურნბერგის პროცესზე]] ]]
-*[[1937]] - ''იანვარი:'' [[ჰიმლერი, ჰაინრიხ|ჰიმლერის]] ბრძანებით იგი ინიშნება ავსტრიის [[SS]]-ის შეფად და ხდება [[ბრიგადენფიურერი]].
+*[[1937]] - ''იანვარი:'' [[ჰიმლერი, ჰაინრიხ|ჰიმლერის]] ბრძანებით იგი ინიშნება ავსტრიის [[სს]]-ის შეფად და ხდება [[ბრიგადენფიურერი]].
 *[[1938]] - ''[[12 მარტი]]:'' [[ავსტრიის ანშლუსი|ავსტრიის ანშლუსის]] შემდეგ [[ზაის-ინკვარტი, არტურ|არტურ ზაის-ინკვარტის]] მთავრობაში იგი უშიშროების მთავარი მდივანი და [[რაიხსტაგი|რაიხსტაგის]] წევრი ხდება. ''[[11 სექტემბერი]]:'' კალტენბრუნერი დააწინაურეს [[გრუპენფიურერი|გრუპენფიურერად]].
 *[[1938]]-[[1939]] - კალტენბრუნერი ორგანიზირებას უკეთებს ავსტრიაში [[გესტაპო|გესტაპოს]] აპარატის ჩამოყალიბებას. აქტიურად მოანაწილეობს [[საკონცენტრაციო ბანაკი|საკონცენტრაციო ბანაკ]] [[მაუტჰაუზენი(KZ)|მაუტჰაუზენის]] შექმნაში და კურირებს "[[ებრაული საკითხი|ებრაულ საკითხს]]".
-*[[1939]] - კალტენბრუნერი ინიშნება ავსტრიის [[SS]]-ის და [[ვენა|ვენის]] პოლიციის უფროსად.
+*[[1939]] - კალტენბრუნერი ინიშნება ავსტრიის [[სს]]-ის და [[ვენა|ვენის]] პოლიციის უფროსად.
 *[[1943]] - ''[[30 იანვარი]]:'' [[ჰაიდრიხი, რაინჰარდ|ჰაიდრიხის]] მკვლელობის შემდეგ იგი [[SD]]-ს და  [[რაიხის უშიშროების მთავარი სამმართველო|რაიხის უშიშროების მთავარი სამმართველოს]] შეფი ხდება. ''[[21 ივნისი]]:'' [[ჰიტლერი, ადოლფ|ჰიტლერის]] ბრძანებით მას მიენიჭა [[ობერგრუპენფიურერი|ობერგრუპენფიურერის]] და პოლიციის [[გენერალი|გენერლის]] ჩინი.
 *[[1944]] - [[კანარისი, ვილჰელმ|კანარისის]] დათხოვნის შემდეგ "[[აბვერი]]" კალტენბრუნერის კონტროლის ქვეშ ექცევა.
 *[[1945]] - ომის მიწურულს მას შტაბი ავსტრიაში, [[შტაიერმარკი|შტაიერმარკში]] გადააქვს, სადაც ამერიკელების მიერ დაპატიმრებულ იქნა. ''ნოემბერი:''  სამხედრო ტრიბუნალზე კალტენბრუნერი მთავარ დამნაშავეთა სიაში მოხვდა. 
@@ -31,7 +31,7 @@
 [[კატეგორია:გერმანელები]]
 [[კატეგორია:დაბადებული  1903]]
 [[კატეგორია:გარდაცვლილი  1946]]
-[[კატეგორია:სამხედრო დამნაშავე]]
+[[კატეგორია:სამხედრო დამნაშავეები]]
 [[de:Ernst Kaltenbrunner]]
 [[en:Ernst Kaltenbrunner]]
 [[fr:Ernst Kaltenbrunner]]
