*Empty MediaWiki Message*

--- a/როდენის_მუზეუმი_(პარიზი).mw
+++ b/როდენის_მუზეუმი_(პარიზი).mw
@@ -1,4 +1,4 @@
-'''როდენის მუზეუმი''' (ფრანგ. Musée Rodin) [[პარიზი|პარიზში]], [[საფრანგეთი]], გაიხსნა 1919 წელს სასტუმრო ბირონსა და მის შემოგარენში. აქ გამოფენილია ფრანგი სკულპტორის [[როდენი, აუგუსტ|აუგუსტ როდენის]] ნამუშევრები.
+'''როდენის მუზეუმი''' (''[[ფრანგული ენა|ფრანგ.]]'' Musée Rodin) [[პარიზი|პარიზში]], [[საფრანგეთი]], გაიხსნა 1919 წელს სასტუმრო ბირონსა და მის შემოგარენში. აქ გამოფენილია ფრანგი სკულპტორის [[როდენი, აუგუსტ|აუგუსტ როდენის]] ნამუშევრები.
 
 როდენი სასტუმრო ბირონში ცხოვრობდა 1908 წლიდან და შემდეგ მთელი საკუთარი სკულპტურების კოლექცია ([[ვან გოგი, ვინსენტ|ვინსენტ ვან გოგისა]] და [[რენუარი, პიერ-აუგუსტ|პეირ-აუგუსტ რენუარის]] ტილოებთან ერთად) საფრანგეთის სახელმწიფოს გადასცა იმ პირობით, რომ მთავრობა სასტუმროს შენობას მისი ნამუშევრებისადმი მიძღვნილ მუზეუმად აქცევდა.
 
