--- a/კანადა.mw
+++ b/კანადა.mw
@@ -51,9 +51,8 @@
 
 *'''სახელმწიფო სისტემა''':  დემოკრატიული ფედერაციული კონსტიტუციური მონარქია. 
 *'''სახელმწიფოს მეთაური''':  დიდი ბრიტანეთის დედოფალი (1952 წლიდან), რომლის წარმომადგენელია გენერალ-გუბერნატორი. 
-*'''მთავრობის მეთაური''':  პრემიერ-მინისტრი ედრიენ კლარკსონი. 
+*'''მთავრობის მეთაური''':  პრემიერ-მინისტრი სტივენ ჰარპერი. 
 *'''საკანონმდებლო ორგანო''':  ორპალატიანი პარლამენტი (105+301 წევრი).
-
 
 ==ადმინისტრაციული დაყოფა==
 
