*Empty MediaWiki Message*

--- a/კანადა.mw
+++ b/კანადა.mw
@@ -16,7 +16,7 @@
 '''[[მოსახლეობა]]''': 30 007 000 ([[2004]])<br/>
 '''[[დედაქალაქი]]''': [[ოტავა]]<br/>
 '''[[სახელმწიფო ენა]]''': [[ინგლისური ენა|ინგლისური]] და [[ფრანგული ენა| ფრანგული]]<br/>
-'''[[კანადის პრემიერ-მინისტრი| პრემიერ-მინისტრი]]''':  ედრიენ კლარკსონი<br/>
+'''[[კანადის პრემიერ-მინისტრი| პრემიერ-მინისტრი]]''':  სტივენ ჰარპერი<br/>
 '''[[დევიზი]]''': ”ზღვიდან ზღვამდე”<br/>
 '''[[სახელმწიფო ჰიმნი]]''':  ”O Canada”<br/>
 '''[[ვალუტა]]''': [[კანადური დოლარი]]<br/>
