--- a/კანადა.mw
+++ b/კანადა.mw
@@ -90,7 +90,7 @@
 ==ცნობილი კანადელები==
 
 *'''[[მწერლები]]'''  - ალისტერ მაკლეოდი; 
-*'''[[გამომგონებლები]]'''  - ალექსანდერ ბელი (ტელეფონის გამომგონებელი), 
+*'''[[გამომგონებლები]]'''  - ალექსანდერ ბელი (ტელეფონის გამომგონებელი), ფრედერიკ ბანტინგი (ინსულინის გამომგონებელი)
 *'''[[ბიზნესმენები]]'''  - ჯეკ უორნერი (ფილმ-სტუდიის დამაარსებელი), 
 *'''[[მსახიობები]]'''  - პამელა ანდერსონი, მერი პიკფორდი; 
 *'''[[სუპერმოდელები]]'''  - ლინდა ევანჯელისტა; 
