*Empty MediaWiki Message*

--- a/კანადა.mw
+++ b/კანადა.mw
@@ -17,7 +17,7 @@
 '''[[დედაქალაქი]]''': [[ოტავა]]<br/>
 '''[[სახელმწიფო ენა]]''': [[ინგლისური ენა|ინგლისური]] და [[ფრანგული ენა| ფრანგული]]<br/>
 '''[[კანადის პრემიერ-მინისტრი| პრემიერ-მინისტრი]]''':  სტივენ ჰარპერი<br/>
-'''[[გენერალ-გუბერნატორი]]''': მიშელ ჯინი</br>
+'''[[გენერალ-გუბერნატორი]]''': მიკაელ ჟანი</br>
 '''[[დევიზი]]''': ”ზღვიდან ზღვამდე”<br/>
 '''[[სახელმწიფო ჰიმნი]]''':  ”O Canada”<br/>
 '''[[ვალუტა]]''': [[კანადური დოლარი]]<br/>
