--- a/კანადა.mw
+++ b/კანადა.mw
@@ -90,11 +90,11 @@
 ==ცნობილი კანადელები==
 
 *'''[[მწერლები]]'''  - ალისტერ მაკლეოდი; 
-*'''[[გამომგონებლები]]'''  - ალექსანდერ ბელი (ტელეფონის გამომგონებელი), ფრედერიკ ბანტინგი (ინსულინის გამომგონებელი)
+*'''[[გამომგონებლები]]'''  - ალექსანდერ ბელი (ტელეფონის გამომგონებელი), ფრედერიკ ბანტინგი (ინსულინის გამომგონებელი), ჯეიმს ნაისმითი (კალათბურთის გამომგონებელი)
 *'''[[ბიზნესმენები]]'''  - ჯეკ უორნერი (ფილმ-სტუდიის დამაარსებელი), 
-*'''[[მსახიობები]]'''  - პამელა ანდერსონი, მერი პიკფორდი; 
-*'''[[სუპერმოდელები]]'''  - ლინდა ევანჯელისტა; 
-*'''[[მუსიკოსები]]'''  - ოსკარ პიტერსონი, პოლ ანკა; 
+*'''[[მსახიობები]]'''  - მერი პიკფორდი, ქრისტოფერ პლამერი, მაიკლ მეიერსი, კიანუ რივსი; 
+*'''[[სუპერმოდელები]]'''  - ლინდა ევანჯელისტა, ნატაშა ჰენსტრიჯი, პამელა ანდერსონი; 
+*'''[[მუსიკოსები]]'''  - ოსკარ პიტერსონი, პოლ ანკა, ბრიან ადამსი, სელინ დიონი, შანაია ტვეინი; 
 *'''[[სპორტსმენები]]'''  - ჟილ ვილნევი (ავტორბოლა), ბობი ჰალი, გორდი ჰოუ, უეინ გრეცკი, მარიო ლემიე (ჰოკეი). 
 
 [[კატეგორია:კანადა|*]]
