--- a/კანადა.mw
+++ b/კანადა.mw
@@ -95,7 +95,7 @@
 *'''[[მსახიობები]]'''  - მერი პიკფორდი, ქრისტოფერ პლამერი, მაიკლ მეიერსი, კიანუ რივსი; 
 *'''[[სუპერმოდელები]]'''  - ლინდა ევანჯელისტა, ნატაშა ჰენსტრიჯი, პამელა ანდერსონი; 
 *'''[[მუსიკოსები]]'''  - ოსკარ პიტერსონი, პოლ ანკა, ბრიან ადამსი, სელინ დიონი, შანაია ტვეინი; 
-*'''[[სპორტსმენები]]'''  - ჟილ ვილნევი (ავტორბოლა), ბობი ჰალი, გორდი ჰოუ, უეინ გრეცკი, მარიო ლემიე (ჰოკეი). 
+*'''[[სპორტსმენები]]'''  - ჟილ ვილნევი (ავტორბოლა), ბობი ჰალი, გორდი ჰოუ, უეინ გრეცკი, მარიო ლემიე (ჰოკეი), სინდი კლასენი (ჩქაროსნული ციგურაობა). 
 
 [[კატეგორია:კანადა|*]]
 [[კატეგორია:ჩრდილოეთ ამერიკის ქვეყნები]]
