--- a/კანადა.mw
+++ b/კანადა.mw
@@ -90,7 +90,7 @@
 ==ცნობილი კანადელები==
 
 *'''[[მწერლები]]'''  - ალისტერ მაკლეოდი; 
-*'''[[გამომგონებლები]]'''  - ალექსანდერ ბელი (ტელეფონის გამომგონებელი), ფრედერიკ ბანტინგი (ინსულინის გამომგონებელი), ჯეიმს ნაისმითი (კალათბურთის გამომგონებელი)
+*'''[[გამომგონებლები]]'''  - ალექსანდერ ბელი (ტელეფონი), ფრედერიკ ბანტინგი (ინსულინი), ჯეიმს ნაისმითი (კალათბურთი)
 *'''[[ბიზნესმენები]]'''  - ჯეკ უორნერი (ფილმ-სტუდიის დამაარსებელი), 
 *'''[[მსახიობები]]'''  - მერი პიკფორდი, ქრისტოფერ პლამერი, მაიკლ მეიერსი, კიანუ რივსი; 
 *'''[[სუპერმოდელები]]'''  - ლინდა ევანჯელისტა, ნატაშა ჰენსტრიჯი, პამელა ანდერსონი; 
