--- a/კანადა.mw
+++ b/კანადა.mw
@@ -84,8 +84,7 @@
 
 ==მემკვიდრეობა==
 
-კვებეკის ისტორიული რაიონი, ლუნენბურგის ძველი ქალაქი, ნაჰანის, დინოზავრის, როკი მაუნთენის ეროვნული პარკები. 
-
+კვებეკის ისტორიული რაიონი, ლუნენბურგის ძველი ქალაქი, ალგონქინის, ნაჰანის, დინოზავრის, როკი მაუნთენის ეროვნული პარკები.
 
 ==ცნობილი კანადელები==
 
