--- a/კანადა.mw
+++ b/კანადა.mw
@@ -88,9 +88,9 @@
 
 ==ცნობილი კანადელები==
 
-*'''[[მწერლები]]'''  - ალისტერ მაკლეოდი; 
+*'''[[მწერლები]]'''  - ალისტერ მაკლეოდი, დუგლას კუპლანდი; 
 *'''[[გამომგონებლები]]'''  - ალექსანდერ ბელი (ტელეფონი), ფრედერიკ ბანტინგი (ინსულინი), ჯეიმს ნაისმითი (კალათბურთი)
-*'''[[ბიზნესმენები]]'''  - ჯეკ უორნერი (ფილმ-სტუდიის დამაარსებელი), 
+*'''[[ბიზნესმენები]]'''  - ჯეკ უორნერი (ფილმ-სტუდიის დამაარსებელი), კენეთ თომსონი (მედია მაგნატი) 
 *'''[[მსახიობები]]'''  - მერი პიკფორდი, ქრისტოფერ პლამერი, მაიკლ მეიერსი, კიანუ რივსი; 
 *'''[[სუპერმოდელები]]'''  - ლინდა ევანჯელისტა, ნატაშა ჰენსტრიჯი, პამელა ანდერსონი; 
 *'''[[მუსიკოსები]]'''  - ოსკარ პიტერსონი, პოლ ანკა, ბრიან ადამსი, სელინ დიონი, შანაია ტვეინი; 
