*Empty MediaWiki Message*

--- a/საქართველოს_ფეხბურთის_ფედერაცია.mw
+++ b/საქართველოს_ფეხბურთის_ფედერაცია.mw
@@ -1,4 +1,5 @@
-{{National football association |
+საქართველოს ფეხბურთის ფედერაფია 
+{{Georgian Football Association |
   ჰერბი               = Georgia_football_association.gif |
   დაარსდა            = 1990 |
   ფიფაში გაწევრიანდა  = 1992 |
@@ -6,3 +7,7 @@
   ფედერაციის პრეზიდენტი          = [[Nodar Akhalkatsi]] |
   მწვრთნელი              = [[Klaus Toppmöller]]
 }}
+
+
+==ბმულები==
+*[http://www.gff.ge/ ოფიციალური ვებ გვერდი]
