--- a/საქართველოს_ფეხბურთის_ფედერაცია.mw
+++ b/საქართველოს_ფეხბურთის_ფედერაცია.mw
@@ -1,12 +1,11 @@
 საქართველოს ფეხბურთის ფედერაფია 
-{{Georgian Football Association |
-  ჰერბი               = Georgia_football_association.gif |
+
   დაარსდა            = 1990 |
   ფიფაში გაწევრიანდა  = 1992 |
   რეგიონი             = [[UEFA]] |
-  ფედერაციის პრეზიდენტი          = [[Nodar Akhalkatsi]] |
-  მწვრთნელი              = [[Klaus Toppmöller]]
-}}
+  ფედერაციის პრეზიდენტი          = [[ნოდარ ახალკაცი]] |
+  მწვრთნელი              = [[კლაუს ტოპმულერი]]
+
 
 
 ==ბმულები==
