*Empty MediaWiki Message*

--- a/საქართველოს_ფეხბურთის_ფედერაცია.mw
+++ b/საქართველოს_ფეხბურთის_ფედერაცია.mw
@@ -1,10 +1,10 @@
 საქართველოს ფეხბურთის ფედერაფია 
 
-  დაარსდა            = 1990 |
-  ფიფაში გაწევრიანდა  = 1992 |
-  რეგიონი             = [[UEFA]] |
-  ფედერაციის პრეზიდენტი          = [[ნოდარ ახალკაცი]] |
-  მწვრთნელი              = [[კლაუს ტოპმულერი]]
+  დაარსდა             1990 |
+  ფიფაში გაწევრიანდა   1992 |
+  რეგიონი             [[UEFA]] |
+  ფედერაციის პრეზიდენტი [[ნოდარ ახალკაცი]] |
+  მწვრთნელი     [[კლაუს ტოპმულერი]]
 
 
 
