*Empty MediaWiki Message*

--- a/საქართველოს_ფეხბურთის_ფედერაცია.mw
+++ b/საქართველოს_ფეხბურთის_ფედერაცია.mw
@@ -1,6 +1,11 @@
 '''საქართველოს ფეხბურთის ფედერაფია''', დაარსდა [[1990]] წელს.  [[ფიფა|ფიფაში]] გაწევრიანდა   [[1992]], რეგიონი             [[UEFA]], ფედერაციის [[პრეზიდენტი]] [[ახალკაცი, ნოდარ (უმცროსი)|ნოდარ ახალკაცი]], მწვრთნელი     [[ტოპმულერი,  კლაუს|კლაუს ტოპმულერი]].
 
-
+{{ესკიზი}}
 
 ==რესურსები ინტერნეტში==
 *[http://www.gff.ge/ ოფიციალური ვებ გვერდი]
+
+
+
+
+[[en: Georgian Football Federation]]
