/* ებრაული სექტორები ისრაელში */

--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -117,7 +117,7 @@
 
 მიუხედავად იმისა, რომ ზემოთ აღწერილ ყოველ მიმდინარეობას [[ისრაელი |ისრაელშიც]] ჰყავს მიმდევრები, ამ ქვეყნის ებრაელები თავიანთ ვინაობას სხვა კატეგორიით საზღვრავენ, რომლითაც ადამიანები მორწმუნეობის დონის მიხედვით იყოფიან. ეს კატეგორიაა მიგზარი, ანუ, ამ შემთხვევაში, გარკვეული ჩვეულებების მქონე საზოგადოების სექტორი. ისრაელში, სამი ასეთი ძირითადი სექტორია: [[სეკულარიზმი |სეკულარისტი]] (''ხილონი''), [[ტრადიციონალიზმი |ტრადიციონალისტი]] (''მასორათი'') და [[რელიგია |რელიგიოზი]] (''დათი'' ან ''ხარედი'') ებრაელებისა. ხილონებად თავს მიიჩნევენ ძირითადად [[ევროპა |ევროპული]] წარმოშობის (არარელიგიოზი) ებრაელები, რომლებიც საკუთარ ებრაელობას, შესაძლოა, დიდ მნიშვნელობას ანიჭებენ, მაგრამ ებრაული ვინაობა მათ არა ჰგონიათ ტრადიციულ რწმენაზე და კანონებზე დამოკიდებული. ხილონები უარყოფენ რელიგიური ცხოვრების ყოველ ფორმას, მართლმადიდებლურს თუ დასავლეთში უფრო მიღებულ ლიბერალურს (რეფორმისტულს და კონსერვატიულს). მასორათი (ტრადიციონალისტ) ებრაელებად თავს თვლიან ძირითადად "აღმოსავლელი" ([[ახლო აღმოსავლეთი |ახლო აღმოსავლური]], ჩრდილო-[[აფრიკა |აფრიკული]] და შუა-[[აზია |აზიური]] წარმოშობის) არარელიგიოზი ებრაელები. (ამ მასორათი ებრაელებს არავითარი კავშირი არა აქვთ კონსერვატიული იუდაიზმის მიმდევრებთან, რომლებსაც ებრაულად აგრეთვე მასორათები ეწოდებათ).
 
-ამ ტერმინებს - ხილონი და მასორათი - ისრაელში მეტად მრავალმნიშვნელოვნად იყენებენ. ამის მიზეზი ისაა, რომ როგორც სეკულარისტთა, ისე ტრადიციონალისტთა მნიშვნელოვან ნაწილს, მათ შორის არსებული განსხვავებების მიუხედავად, არცთუ ცოტა საერთო თვისება ახასიათებს - როგორც იდეოლოგიურად, ისე ებრაული კანონების შესრულების მხრივ. (სეკულარისტთა უმრავლესობა თითქმის არასოდეს არ ლოცულობს, არც [[შაბათი |შაბათისა]] და [[ქაშრუთი |ქაშრუთის]], ანუ კვების, წესებს იცავს; მეორე მხრივ, სეკულარისტთა უმრავლესობა ტრადიციულად ასრულებს ჩვილ ვაჟთა [[ წინადაცვეთა |წინადაცვეთის]], საქორწილო ცერემონიის, მარხვა-გლოვის, [[ფესახი |ფესახში]] პურეული საკვების აღკვეთისა და [[ქიფურის დღე |ქიფურის დღის]] მარხულობის რელიგიურ წესებს. ტრადიციონალისტები, ბოლოს ჩამოთვლილი წესების გარდა, უფრო ხშირადაც ლოცულობენ, შაბათობით სინაგოგაში დადიან და ქაშრუთის კანონებს ასრულებენ; მიუხედავად ამისა, ტრადიციონალისტთა უმრავლესობა შაბათის ბევრ კანონს არღვევს და საერთოდ, სეკულარისტთა მსგავსად, ცხოვრების დასავლური სტილის მიმდევარია). 
+ამ ტერმინებს - ხილონი და მასორათი - ისრაელში მეტად მრავალმნიშვნელოვნად იყენებენ. ამის მიზეზი ისაა, რომ მათ შორის არსებული განსხვავებების მიუხედავად, სეკულარისტთა და ტრადიციონალისტთა მნიშვნელოვან ნაწილს არცთუ ცოტა საერთო თვისება ახასიათებს - როგორც იდეოლოგიურად, ისე ებრაული კანონების შესრულების მხრივ. (სეკულარისტთა უმრავლესობა თითქმის არასოდეს არ ლოცულობს, არც [[შაბათი |შაბათისა]] და [[ქაშრუთი |ქაშრუთის]], ანუ კვების, წესებს იცავს; მეორე მხრივ, სეკულარისტთა უმრავლესობა ტრადიციულად ასრულებს ჩვილ ვაჟთა [[ წინადაცვეთა |წინადაცვეთის]], საქორწილო ცერემონიის, მარხვა-გლოვის, [[ფესახი |ფესახში]] პურეული საკვების აღკვეთისა და [[ქიფურის დღე |ქიფურის დღის]] მარხულობის რელიგიურ წესებს. ტრადიციონალისტები, ბოლოს ჩამოთვლილი წესების გარდა, უფრო ხშირადაც ლოცულობენ, შაბათობით სინაგოგაში დადიან და ქაშრუთის კანონებს ასრულებენ; მიუხედავად ამისა, ტრადიციონალისტთა უმრავლესობა შაბათის ბევრ კანონს არღვევს და საერთოდ, სეკულარისტთა მსგავსად, ცხოვრების დასავლური სტილის მიმდევარია). 
 
 დიასპორაში მართლმადიდებლურად წოდებული მიმდინარეობა ისრაელში სხვადასხვა ვარიანტებში არსებობს და ებრაელთა უფრო ნაწილს წარმოადგენს, ვიდრე სხვაგან. ისრაელში კამათი მიმდინარეობს იმაზე, თუ ებრაული მოსახლეობის რამდენ პროცენტს შეადგენენ ასეთი, დათი (რელიგიოზი) ებრაელები. ამის გამოსარკვევად ამოწმებენ, პროპორციულად რა ნაწილს შეადგენენ რელიგიოზი პარლამენტარები [[ქნესეთი |ქნესეთის]] წევრებისაგან, რელიგიური სკოლების მოწაფეები ებრაელ მოსწავლეებისაგან, თან სტატისტიკურ კვლევებსაც აწარმოებენ "ვინაობის" საკითხში. საერთო ვარაუდით, აქ რელიგიოზები ებრაელების 15 პროცენტი არიან. ისრაელში, არც რელიგიოზები და არც სეკულარისტები არ იყენებენ ტერმინს - მართლმადიდებელი (ან ორთოდოქსი). ვისაც დიასპორაში მართლმადიდებელს დაუძახებდნენ, ისრაელში მას ''დათი'' (რელიგიოზი) ან ''ხარედი'' (ულტრა-ორთოდოქსი) ეწოდება. ყოველი ხარედი, რა თქმა უნდა დათია (რელიგიოზია). ის დათი, ვინც ხარედი არაა, თავისი ვინაობის დასახასიათებლად ტერმინ დათის სხვა სიტყვას დაუმატებს; ასე წარმოიშვა ტერმინი ''დათი-ციონი'' (სიონისტი რელიგიოზი). ასეთი ებრაელი მართლმადიდებლურად ასრულებს რელიგიურ კანონებს, მაგრამ თორასთან ერთად დიდ მნიშვნელობას ანიჭებს განათლებას და არარელიგიოზი ებრაელების მსგავსად მსახურობს ისრაელის არმიაში. სიონისტ რელიგიოზთა უმეტესი ნაწილი მემარჯვენე პოლიტიკურ შეხედულებებს იზიარებს და [[1967]] წელს შემოერთებულ ტერიტორიებზე დასახლებულ ებრაელთა უმრავლესობას წარმოადგენს. რადგან სწორედ ასეთი ებრაელია ტიპიური სიონისტი რელიგიოზი, ისრაელში ის უფრო ცნობილია ტერმინით ''დათი-ლეუმი'' (ნაციონალისტი რელიგიოზი).     
   
